auto-scale/pluscode-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pluscode-service
spec:
  selector:
    app: pluscode
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
