auto-scale/pluscode-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pluscode-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: pluscode-service
          servicePort: 80
      - path: /pc2
        backend:
          serviceName: pluscode-service
          servicePort: 80
